--- a/public/index.html
+++ b/public/index.html
@@ -332,7 +332,7 @@
       <div class="col-6 col-md">
         <h5 class="main" id="aboutdata" >Facebook</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-muted" href="https://www.facebook.com/Sri.buokaew">https://www.facebook.com/Sri.buokaew</a>
+          <li><a class="text-muted" href="https://www.facebook.com/Sri.buokaew">facebook</a>
           </li>
           <h5>fhone</h5>
           <li><a class="text-muted" href="#">08900000.01</a></li>
