--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
       <div class="my-3 p-3">
 
       </div>
-      <div class="bg-dark shadow-sm mx-auto main" id="contactdata" style="width: 100%; height:100%; border-radius: 21px 21px 0 0;">
+      <div class="bg-dark shadow-sm mx-auto main" id="aboutdata" style="width: 100%; height:100%; border-radius: 21px 21px 0 0;">
         <h1 style="color: rgb(37, 152, 139);">About me</h1>
         <h3 style="color: rgb(252, 115, 10)">My name is Sri Buokaew</h3>
         <h3 style="color: rgb(252, 115, 10);"> my nickname is Fonpraprum</h3>
@@ -330,7 +330,7 @@
 
 
       <div class="col-6 col-md">
-        <h5 class="main" id="aboutdata" >Facebook</h5>
+        <h5 class="main" id="contactdata" >Facebook</h5>
         <ul class="list-unstyled text-small">
           <li><a class="text-muted" href="https://www.facebook.com/Sri.buokaew">facebook</a>
           </li>
