--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,6 @@
       <a class="py-2 d-none d-md-inline-block main" href="#contactdata">Contact</a>
       <a class="py-2 d-none d-md-inline-block main" href="#imagesdata">Image</a>
       <a class="py-2 d-none d-md-inline-block main" href="#aboutdata">About me</a>
-
-
-
     </div>
   </nav>
 
@@ -70,7 +67,8 @@
       <div class="my-3 p-3">
 
       </div>
-      <div class="bg-dark shadow-sm mx-auto main" id="aboutdata" style="width: 100%; height:100%; border-radius: 21px 21px 0 0;">
+      <div class="bg-dark shadow-sm mx-auto main" id="aboutdata"
+        style="width: 100%; height:100%; border-radius: 21px 21px 0 0;">
         <h1 style="color: rgb(37, 152, 139);">About me</h1>
         <h3 style="color: rgb(252, 115, 10)">My name is Sri Buokaew</h3>
         <h3 style="color: rgb(252, 115, 10);"> my nickname is Fonpraprum</h3>
@@ -197,7 +195,7 @@
         }
       </style>
 
-      <head >
+      <head>
         <link rel="stylesheet" href="styles.css">
 
       <body>
@@ -307,11 +305,6 @@
 
 
 
-
-
-
-
-
       <div class="col-12 col-md">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
           stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img"
@@ -327,10 +320,8 @@
 
 
 
-
-
       <div class="col-6 col-md">
-        <h5 class="main" id="contactdata" >Facebook</h5>
+        <h5 class="main" id="contactdata">Facebook</h5>
         <ul class="list-unstyled text-small">
           <li><a class="text-muted" href="https://www.facebook.com/Sri.buokaew">facebook</a>
           </li>
